# bootstrap-keycloak-fastapi-postgres

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  run.sh
backend/alembic/: Dockerfile  env.py
backend/alembic/versions/: 2eea22cf5de1_create_category_item_and_text_tables.py
backend/backend/: auth.py  config.py  db.py  endpoints.py  main.py
backend/db_init_data/: Dockerfile  config.py  db_init.py
backend/development/: Dockerfile  db_data.py
backend/tests/: test_auth.py  test_auth_main.py
bootstrap/: Dockerfile  index.html  main.html  package-lock.json  package.json  webpack.config.js
bootstrap/src/: category.js  index.html  index.js
bootstrap/src/html/: main.html
keycloak/: Dockerfile.init  keycloak-init.tf  main.tf  run-terraform.sh
postgres/: db-init.sh
