[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Andreas Kring <andreas@magenta.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
structlog = "^24.2.0"
more-itertools = "^10.3.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
